[tool.poetry]
name = "ddd+fastapi+kafka+websockets"
version = "0.1.0"
description = ""
authors = ["mialkin <mialkin@bolid.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
motor = "^3.7.1"
uvicorn = {extras = ["all"], version = "^0.41.0"}
pytest = "^9.0.2"
faker = "^40.11.0"
pre-commit = "^4.5.1"
pytest-asyncio = "^1.3.0"
punq = "^0.7.0"
httpx = "^0.28.1"
pydantic-settings = "^2.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "bandit (>=1.9.4,<2.0.0)",
    "ruff (>=0.15.6,<0.16.0)"
]
